K8S-Manifest-Files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital
  template:
    metadata:
      labels:
        app: hospital
    spec:
      containers:
      - name: hospital-container
        image: anushanayak091/hospital:v1.0.0  
        ports:
        - containerPort: 5000
